--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -20,3 +20,16 @@ html, body {
 .custom-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+/* Remove number input arrows (Chrome, Safari, Edge) */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove number input arrows (Firefox) */
+input[type="number"] {
+appearance: textfield;
+-moz-appearance: textfield;
+}
